name: toyscotty
version: 0.0.1
synopsis: toy app connected to mongodb 
homepage: http://example.com/nothinghereyet
build-type: Simple
cabal-version: >=1.18

executable todo
  main-is: Main.hs
  -- other-modules:       
  build-depends:       base ==4.7.*
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , persistent ==1.3.*
                     , mongoDB ==2.0.*
                     , persistent-template ==1.3.*
                     , fast-logger >=0.2
                     , monad-logger ==0.3.*
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time